@@ -1,3 +1,14 @@
+2000-07-10 11:43:22  ShengHuo ZHU  <zsh@cs.rochester.edu>
+
+	* nnslashdot.el (nnslashdot-threaded-retrieve-headers): Use
+	unibyte.
+	(nnslashdot-sane-retrieve-headers): Ditto.
+	(nnslashdot-request-article): Ditto.
+
+2000-07-10 11:12:32  William M. Perry <wmperry@aventail.com>
+
+	* mailcap.el (mailcap-parse-mimetype-file): 
+
 2000-07-07 23:46:22  ShengHuo ZHU  <zsh@cs.rochester.edu>
 
 	* nnweb.el (nnweb-insert): Stricter test.
